deal with recent cyber changes, particularly the move from multind to index

--- a/shaney/sourapples/defaults.ini
+++ b/shaney/sourapples/defaults.ini
@@ -39,10 +39,11 @@ ignore_directories = .svn
 
 [indices]
 # You shouldn't change these.
-builtin = class
-    define
-    g
-    compliance
+builtin = class,classes.idx,classes.ind
+    define,defines.idx,defines.ind
+    g,general.idx,general.ind
+    cybercompliance,cybercompliance.idx,cybercompliance.ind
+    file,files.idx,files.ind
 
 # Any extra indices you define, newline-delimited.
 extra =
@@ -50,6 +51,8 @@ extra =
 [index_titles]
 class = Classes
 define = Defined Resource Types
+default = Index
+cybercompliance = Compliance
 
 [policy]
 # Number of directories to strip off the beginning of filenames before
