--- a/shaney/sourapples/defaults.ini
+++ b/shaney/sourapples/defaults.ini
@@ -40,9 +40,9 @@ ignore_directories = .svn
 [indices]
 # You shouldn't change these.
 builtin = class,classes.idx,classes.ind
-    define,defines.idx,defines.ind
-    g,general.idx,general.ind
     cybercompliance,cybercompliance.idx,cybercompliance.ind
+    default,idx,ind
+    define,defines.idx,defines.ind
     file,files.idx,files.ind
 
 # Any extra indices you define, newline-delimited.
